# autogovern

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  BUILDLOG.md  BUILDPLAN.md  CHANGELOG.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
action/: action.yml
docs/: BUILDLOG.md  BUILDPLAN.md  SPEC.md
install/: install.ps1  install.sh
schemas/: AgentAuthentication.json  AgentCapabilities.json  AgentCard.json  AgentProfile.json  AgentProvider.json  AgentSkill.json  AttentionItem.json  Config.json  ContextManifest.json  Dependency.json  GovernanceExtension.json  MaterialityCriterion.json  MaterialityResult.json  ModelConfiguration.json  ModelProviderConfig.json  Permission.json  PromptEntry.json  Provenance.json  ProvenancedField.json  RunManifest.json  SectionRegeneration.json  Thresholds.json  TokenCounts.json  VerifierResult.json
scripts/: export_schemas.py
src/autogovern/: __init__.py  api.py  check.py  cli.py  config.py  config_loader.py  explain.py  models.py  provider.py
tests/: conftest.py  test_acceptance.py  test_api.py  test_check.py  test_cli.py  test_detect.py  test_enterprise_readiness.py  test_fixtures.py  test_generate.py  test_hardening.py  test_init.py  test_manifests.py  test_models.py  test_multi_agent.py  test_normalise.py  test_observability.py  test_pack.py  test_parsers.py  test_perf.py  test_provider.py  test_scan.py  test_scan_cli.py  test_secrets_discipline.py  test_smoke.py  test_tui.py  test_verify.py  test_versioning.py
(+76 files in other folders)
